--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-# diesel = { version = "1.0.0", features = ["sqlite"] }
-# log = "0.4"
+diesel = "1.4.2"
+log = "0.4"
