--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-diesel = "1.4.2"
+diesel = { version = "1.4.2", features = ["postgres"] }
+# diesel_codegen = { version = "0.16.0", features = ["postgres"] }
 dotenv = "0.14"
 log = "0.4"
 serde_json = "1.0"
