--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ diesel = { version = "1.4.2", features = ["postgres"] }
 dotenv = "0.14"
 log = "0.4"
 serde_json = "1.0"
-uuid = "0.7.4"
+uuid = { version = "0.7", features = ["serde", "v4", "v5"] }
