--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
 edition = "2018"
 
+[lib]
+name = "sage"
+
 [dependencies]
-diesel = { version = "1.4.2", features = ["postgres"] }
-# diesel_codegen = { version = "0.16.0", features = ["postgres"] }
 dotenv = "0.14"
 log = "0.4"
 serde_json = "1.0"
-uuid = { version = "0.7", features = ["serde", "v4", "v5"] }
+uuid = { version = "0.7", features = ["serde", "v4"] }
