--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ name = "sage"
 [dependencies]
 dotenv = "0.14"
 log = "0.4"
+ntriple = "0.1.1"
+rdf = "0.1.4"
 serde_json = "1.0"
 uuid = { version = "0.7", features = ["serde", "v4"] }
