Sage command line interface sub-crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "sage"
 version = "0.1.0"
 authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
 edition = "2018"
+readme = "README.md"
+description = "Sage is an open source Knowledge Graph used to represent linked-data."
+license = "Apache-2.0"
+repository = "https://github.com/victor-iyiola/rust-sage"
+keywords = ["knowledge-graph", "linked-data", "sage"]
 
 [lib]
 name = "sage"
@@ -14,3 +19,8 @@ ntriple = "0.1.1"
 rdf = "0.1.4"
 serde_json = "1.0"
 uuid = { version = "0.7", features = ["serde", "v4"] }
+
+[workspace]
+members = [
+  "sage_cli"
+]
