--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,15 @@ matrix:
         - rustup run nightly cargo build
         - rustup run nightly cargo test
 
-cache:
-  cargo: true
+
 before_cache:
   # Travis can't cache files that are not readable by "others"
   - chmod -R a+r $HOME/.cargo
+cache:
+  cargo: true
 
+before_script:
+  - rustup component add rustfmt
 script:
   # Build with the stable version.
   - cargo build
