--- a/sage_cli/Cargo.toml
+++ b/sage_cli/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "sage_cli"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
 edition = "2018"
 license = "Apache-2.0"
-description = "Provides the CLI for the Sage crate"
+description = "Command line interface support for `sage`."
 readme = "README.md"
-repository = "https://github.com/victor-iyiola/sage"
+repository = "https://github.com/victor-iyi/sage"
 keywords = ["knowledge-graph", "linked-data", "sage", "cli"]
 autotests = false
 
@@ -15,5 +15,5 @@ name = "sage"
 path = "src/main.rs"
 
 [dependencies]
-clap = "2.33.0"
+clap = "2.33"
 sage = { path = "../../sage" }
