--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,5 +1,5 @@
 edition = "2018"
 tab_spaces = 2
 max_width = 80
-format_code_in_doc_comments = true
+# format_code_in_doc_comments = true
 # wrap_comments = true
