--- a/sage_cli/Cargo.toml
+++ b/sage_cli/Cargo.toml
@@ -2,12 +2,14 @@
 name = "sage_cli"
 version = "0.1.1"
 authors = ["Victor I. Afolabi <javafolabi@gmail.com>"]
-description = "Command line interface support for `sage`."
 edition = "2018"
-license = "Apache-2.0"
+description = "Command line interface support for `sage`."
 readme = "README.md"
 repository = "https://github.com/victor-iyi/sage"
-keywords = ["knowledge-graph", "linked-data", "sage", "cli"]
+license = "Apache-2.0"
+keywords = ["sage", "knowledge-graph", "linked-data", "cli"]
+categories = ["command-line-interface", "command-line-utilities"]
+autobins = false
 autotests = false
 
 [[bin]]
