--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,19 +20,35 @@ path = "src/lib.rs"
 
 [dependencies]
 dotenv = "0.15"
-indexmap = "1.7"
+ryu = "1.0.5"
 log = "0.4"
 ntriple = "0.1.1"
 regex = "1.3.1"
 rdf = "0.1.4"
 rand = "0.8"
-serde_json = "1.0"
+itoa = { version = "0.4", default-features = false }
+serde = { version = "1.0", default-features = false }
+serde_json = { version = "1.0" }
 uuid = { version = "0.8", features = ["serde", "v4"] }
+indexmap = { version = "1.7", optional = true }
 
 [workspace]
 members = [
   "sage_cli",
 ]
+
+[features]
+std = ["serde/std"]
+
+# Use an arbitrary precision number representation for sage::Number.
+# This allows sage numbers of arbitrary size/precision to be read into
+# a Number and written back to a string without loss of precision.
+arbitrary_precision = []
+
+# Make sage::Map use a representation which maintains insertion order.
+# This allows data to be read into `DType` and written back to a string
+# while preserving the order of map keys in the input.
+preserve_order = ["indexmap"]
 
 [badges]
 appveyor = { repository = "victor-iyi/sage", service = "github" }
