--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,15 @@ members = [
 # a Number and written back to a string without loss of precision.
 arbitrary_precision = []
 
+# Use sufficient precision when parsing fixed precision floats from JSON to
+# ensure that they maintain accuracy when round-tripped through JSON. This
+# comes at approximately 2x performance cost for parsing floats compared to
+# the default best-effort precision.
+#
+# Unlike "arbitrary_precision", this feature makes f64 -> JSON -> f64 produce
+# output identical to the input.
+# float_roundtrip = []
+
 # Make sage::Map use a representation which maintains insertion order.
 # This allows data to be read into `DType` and written back to a string
 # while preserving the order of map keys in the input.
@@ -51,6 +60,17 @@ preserve_order = ["indexmap"]
 
 # Provide a `RawDType` type that can hold unprocessed JSON during deserialization.
 raw_dtype = []
+
+# Provide a method disable_recursion_limit to parse arbitrarily deep JSON
+# structures without any consideration for overflowing the stack. When using
+# this feature, you will want to provide some other way to protect against stack
+# overflows, such as by wrapping your Deserializer in a dynamically growing
+# stack adapter provided by the `serde_stacker` crate.
+#
+# Additionally, you will need to be careful around other recursive operations on
+# the parsed result which may overflow the stack after deserialization has
+# completed, including, but not limited to, `Display` and `Debug` impls.
+unbounded_depth = []
 
 [badges]
 appveyor = { repository = "victor-iyi/sage", service = "github" }
